deploy/deploy.nodegrace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodegrace
  name: nodegrace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodegrace
  template:
    metadata:
      labels:
        app: nodegrace
    spec:
      containers:
      - name: nodegrace
        image: nontster/nodegrace:1.4
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"    
        ports:
        - name: http
          containerPort: 8080
        lifecycle:
          preStop:
            httpGet:
              port: http
              path: shutdown
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 2
      terminationGracePeriodSeconds: 24
