deploy/svc-nodegrace.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodegrace
  name: nodegrace
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodegrace
  type: ClusterIP
