deploy/ing-nodegrace.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-nodegrace
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: nodegrace
            port:
              number: 8080
        path: /
        pathType: Exact
